kubernetes/backend_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter-backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    project: counter
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ccc.k8s.sikademo.com
      secretName: ccc.k8s.sikademo.com-tls
  rules:
    - host: ccc.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counter-backend
                port:
                  number: 80
